--- a/src/main/webapp/ngapp/src/app/login/login.component.html
+++ b/src/main/webapp/ngapp/src/app/login/login.component.html
@@ -2,13 +2,13 @@
   <form>
     <div class="form-group">
       <label for="emailInput">Correo electrónico</label>
-      <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Ingresa tu correo">
+      <input type="text" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Ingresa tu correo">
     </div>
     <div class="form-group">
       <label for="passwordInput">Contraseña</label>
-      <input type="password" class="form-control" id="passwordlInput" placeholder="Ingresa tu contraseña">
+      <input type="password" class="form-control" id="passwordInput" placeholder="Ingresa tu contraseña">
     </div>
-    <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
+    <button type="button" class="btn btn-primary btn-block" (click)="login()">Ingresar</button>
   </form>
 </section>
 <router-outlet></router-outlet>
