--- a/src/main/webapp/ngapp/src/app/login/login.component.html
+++ b/src/main/webapp/ngapp/src/app/login/login.component.html
@@ -1,14 +1,14 @@
 <section class="container main">
   <form>
     <div class="form-group">
-      <label for="emailInput">Correo electrónico</label>
-      <input type="text" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Ingresa tu correo">
+      <label for="usernameInput">Correo electrónico</label>
+      <input #username type="text" class="form-control" id="usernameInput" aria-describedby="usernameHelp" placeholder="Ingresa tu nombre de usuario">
     </div>
     <div class="form-group">
       <label for="passwordInput">Contraseña</label>
-      <input type="password" class="form-control" id="passwordInput" placeholder="Ingresa tu contraseña">
+      <input #password type="password" class="form-control" id="passwordInput" placeholder="Ingresa tu contraseña">
     </div>
-    <button type="button" class="btn btn-primary btn-block" (click)="login()">Ingresar</button>
+    <button type="button" class="btn btn-primary btn-block" (click)="login(username.value, password.value)">Ingresar</button>
   </form>
 </section>
 <router-outlet></router-outlet>
