Vista nueva "About"
Se agrega nueva vista About despues del login

--- a/src/main/webapp/ngapp/src/app/components/home/home.component.html
+++ b/src/main/webapp/ngapp/src/app/components/home/home.component.html
@@ -2,4 +2,5 @@
   home works!
 </p>
 <button type = "button" (click)="logOut()">Log out</button>
+<button type="button" (click)="about()">Ir a about</button>
 <router-outlet></router-outlet>
