--- a/src/main/webapp/ngapp/src/app/components/login/login.component.html
+++ b/src/main/webapp/ngapp/src/app/components/login/login.component.html
@@ -6,9 +6,9 @@
     </div>
     <div class="form-group">
       <label for="passwordInput">Contraseña</label>
-      <input #password type="password" class="form-control" id="passwordInput" placeholder="Ingresa tu contraseña">
+      <input #contrasena type="contrasena" class="form-control" id="passwordInput" placeholder="Ingresa tu contraseña">
     </div>
-    <button type="button" class="btn btn-primary btn-block" (click)="login(username.value, password.value)">Ingresar</button>
+    <button type="button" class="btn btn-primary btn-block" (click)="login(username.value, contrasena.value)">Ingresar</button>
   </form>
 </section>
 <router-outlet></router-outlet>
